[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/image/supply_double_missile.png" type="Texture" id=1]
[ext_resource path="res://Scripts/double.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/get_double_laser.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 25.1812
height = 33.7234

[node name="double" type="Area2D"]
position = Vector2( 28.7568, -45.3514 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.0364071, 0.964726 )
scale = Vector2( 2.65034, 4.30009 )

[node name="get_double" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
[connection signal="body_entered" from="." to="." method="_on_double_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
